--- a/DeepNeuralNetwork.ipynb
+++ b/DeepNeuralNetwork.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### In this notebook, I built a Deep Neural Network from scratch to identify Pulsars from the given dataset. \n",
+    "### In this notebook, I am building a Deep Neural Network from scratch to identify Pulsars from the given dataset. \n",
     "- The dataset can be obtained from Kaggle at https://www.kaggle.com/pavanraj159/predicting-a-pulsar-star."
    ]
   },
@@ -17,8 +17,6 @@
     "\n",
     "- [numpy](www.numpy.org) is the main package for scientific computing with Python.\n",
     "- [matplotlib](http://matplotlib.org) is a library to plot graphs in Python.\n",
-    "- dnn_utils provides some necessary functions for this notebook.\n",
-    "- testCases provides some test cases to assess the correctness of your functions\n",
     "- np.random.seed(1) is used to keep all the random function calls consistent."
    ]
   },
@@ -31,8 +29,6 @@
     "import numpy as np\n",
     "import h5py\n",
     "import matplotlib.pyplot as plt\n",
-    "#from testCases_v4 import *\n",
-    "#from dnn_utils_v2 import sigmoid, sigmoid_backward\n",
     "\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (5.0, 4.0) # set default size of plots\n",
