Update Practice - Deep Neural Network.ipynb

--- a/Practice - Deep Neural Network.ipynb
+++ b/Practice - Deep Neural Network.ipynb
@@ -503,7 +503,7 @@
    "source": [
     "# Importing the dataset\n",
     "\n",
-    "dataset = pd.read_csv('C:/Users/A1791729/Desktop/MyProject/Datasets/predicting-a-pulsar-star/pulsar_stars.csv')"
+    "dataset = pd.read_csv('pulsar_stars.csv')"
    ]
   },
   {
